# libdroid

./: COPYING  meson.build
data/: eu.medesimo.Libdroid.gschema.xml  meson.build
debian/: control  copyright  gir1.2-droid-0.install  libdroid-0-0.install  libdroid-0-0.symbols  libdroid-common.install  libdroid-dev.install  libdroid-hal-lights.install  libdroid-hal.install  libdroid-tools.install
hals/: libdroid-hal-lights.service.in  lights.c  meson.build
hals/common/: hal-implementation.c  hal-implementation.h  hal-service.c  hal-service.h  libdroidhal.syms  meson.build  utils.c  utils.h
include/: meson.build
include/libdroid/: leds.h  libdroid-version.h.in  libdroid.h  meson.build
include/libdroid-shared/: leds-objects.h
src/: binder.c  binder.h  leds-backend-aidl.c  leds-backend-aidl.h  leds-backend-hidl.c  leds-backend-hidl.h  leds-backend.c  leds-backend.h  leds.c  libdroid.syms  meson.build  settings.c  settings.h
tools/: backlight.c  meson.build
